--- a/proj2_from_scratch/scheduler/README.rdoc
+++ b/proj2_from_scratch/scheduler/README.rdoc
@@ -1,28 +1,31 @@
-== README
+Title: Scheduler
+Team Members: Scarlett Wu, Erica Meng, Morgan Lee
+Demo Link: 
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Idea: An application where administrators can add and remove courses and other users (students) can make schedules and add or remove courses to their desired schedules. 
 
-Things you may want to cover:
+Models and Description:
+Admin
+- has email and many courses
+Student
+- has email and many schedules
+Course
+- has subject, number (nbr), title, description, start time, end time, location, days of the week (days), and instructor
+- has email (denotes which Admin created it)
+- belongs to a Schedule
+Schedule
+- has name and email (denotes which Student created it)
+- belongs to a Student
+- has many courses
+Comment
 
-* Ruby version
+Features:
+Admins and Students can log in
+Admins can create and delete courses
+Students can create and delete schedules as well as add and remove courses from their schedules
+Students can add comments about classes???
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Division of Labor:
+Scarlett:
+Erica:
+Morgan:
